<resources>

    //--- main fragment
    <string name="TitleMain">Conexión: http://[Servidor]:[puerto]</string>
    <string name="checkBt">Prueba</string>
    <string name="app_name">GrabWaves</string>
    <string name="serverUrl">http://192.168.0.68:2000</string>

    <string name="pasteBt">Pegar</string>
    <string name="hintPasteTb">Pegar enlace</string>

    <string name="msgPlayListError">Error en playlist</string>

    <string name="msgConfigServer">Por favor configure un servidor primero</string>
    <string name="msgRetryException">Retry exception</string>
    <string name="msgRetryIOException">Retry IOexception</string>
    <string name="msgNotImplemented">Not Implemented</string>


    //--- Video item recyclerview

    //--- Menu
    <string name="configMenu">Config</string>

    //--- Config Fragment
    <string name="configTitle">Configuración</string>
    <string name="titleIndefined">-----------</string>

    //--- Main Fragment
    <string name="tab0">Historia</string>
    <string name="tab1">Buscar</string>
    <string name="tab2">Reproductor</string>

    //--- History Fragment
    <string name="msgPreload">Procesando</string>
    <string name="msgPlaying">Reproducciendo</string>

    //---- Search Fragment
    <string name="searchtbhint">Buscar</string>

    //--- add item Cola messages
    <string name="queueAdd">Agregar al final</string>
    <string name="queueNext">Agregar siguiente</string>
    <string name="queueNew">Crear nueva lista</string>
    <string name="playNow">Tocar ahora</string>
    <string name="titlequeue">Reproducir medio</string>
    <string name="messageQueue">Escoja que quiere hacer con el enlace de audio en la lista de reproducción:</string>


    <!-- Notificaiton Channel -->
    <string name="notification_channel">Reproduciendo</string>
    <string name="notification_channel_description">Muestra que se está reproduciendo en UAMP</string>

    <!-- Error messages -->
    <string name="error_media_not_found">No se encuentra el medio de reproducción.</string>
    <string name="generic_error">La applicación encontró un error inesperado.</string>


    //--- dialog delete confirmation
    <string name="DeleteTitle">Eliminar</string>
    <string name="deleteMessage">Esta seguro que quiere eliminar estos enlaces de audio ?</string>
    <string name="Okdelete">Borrar</string>
    <string name="cancelDelete">Cancel</string>

    //--- dialog configuration
    <string name="swTextHq">Max calidad</string>
    <string name="swTextLq">Min calidad</string>
    <string name="swTextTransFalse">Original</string>
    <string name="swTextTransTrue">Transcodificación</string>

    //--- Selection Dialog Fragment
    <string name="selectionTitle">Que quiere hacer con la selección:</string>
    <string name="downloadSelecction">Descargar</string>
    <string name="cancelSelecction">Cancel</string>

</resources>